Fixed popup not showing

--- a/components/Search/search.module.css
+++ b/components/Search/search.module.css
@@ -32,7 +32,6 @@
 }
 
 .popup {
-    display: none;
     position: fixed;
     top: 50%;
     left: 50%;
